tests/snapshots/regression-structure_stats-armed_skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(eft_fit, skills, edit)"
---
ship/type                                      = Fortizar
ship/scanStrength                              = 500.000000
ship/passiveShieldEffectiveRechargeRate        = 0.084373
ship/passiveShieldRechargeRate                 = 0.067499
ship/ehp                                       = 87749998.692423
ship/shieldThermalDamageEffectiveResonance     = 0.200000
ship/shieldKineticDamageEffectiveResonance     = 0.200000
ship/shieldExplosiveDamageEffectiveResonance   = 0.200000
ship/shieldEmDamageEffectiveResonance          = 0.200000
ship/hullThermalDamageEffectiveResonance       = 0.200000
ship/hullKineticDamageEffectiveResonance       = 0.200000
ship/hullExplosiveDamageEffectiveResonance     = 0.200000
ship/hullEmDamageEffectiveResonance            = 0.200000
ship/armorThermalDamageEffectiveResonance      = 0.200000
ship/armorKineticDamageEffectiveResonance      = 0.200000
ship/armorExplosiveDamageEffectiveResonance    = 0.200000
ship/armorEmDamageEffectiveResonance           = 0.200000
ship/shieldEhp                                 = 33749999.497086
ship/hullEhp                                   = 26999999.597669
ship/armorEhp                                  = 26999999.597669
ship/shieldDamageEffectiveResonance            = 0.800000
ship/hullDamageEffectiveResonance              = 0.800000
ship/armorDamageEffectiveResonance             = 0.800000
ship/damagePerSecondWithReload                 = 870.294118
ship/damagePerSecondWithoutReload              = 944.166667
ship/damageAlpha                               = 5720.000000
ship/powerFree                                 = 2075000.000000
ship/cpuFree                                   = 31800.000000
ship/capacitorDepletesIn                       = -1.000000
ship/capacitorPeakDeltaPercentage              = 65.440000
ship/capacitorPeakDelta                        = 113.611111
ship/capacitorPeakLoad                         = 60.000000
ship/capacitorPeakRecharge                     = 173.611111
ship/powerLoad                                 = 625000.000000
ship/cpuLoad                                   = 6200.000000
ship/shieldCapacity                            = 27000000.000000
ship/armorHP                                   = 21600000.000000
ship/structureFullPowerStateHitpointMultiplier = 4.000000
ship/structurePowerStateArmorPlatingMultiplier = 1.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 20.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

high_1/type                         = Standup Multirole Missile Launcher I
high_1/state                        = active
high_1/damageVolley                 = 2640.000000
high_1/speedWithReload              = 3200.000000
high_1/speedOfReload                = 200.000000
high_1/damagePerSecondWithReload    = 825.000000
high_1/damagePerSecondWithoutReload = 880.000000
high_1/chargeAmount                 = 50.000000
high_1/charge/type                  = Standup Cruise Missile
high_1/charge/emDamage              = 660.000000
high_1/charge/explosiveDamage       = 660.000000
high_1/charge/kineticDamage         = 660.000000
high_1/charge/thermalDamage         = 660.000000

high_2/type                         = Standup Guided Bomb Launcher I
high_2/state                        = active
high_2/damageVolley                 = 3080.000000
high_2/speedWithReload              = 68000.000000
high_2/speedOfReload                = 20000.000000
high_2/damagePerSecondWithReload    = 45.294118
high_2/damagePerSecondWithoutReload = 64.166667
high_2/chargeAmount                 = 3.000000
high_2/speed                        = 48000.000000
high_2/charge/type                  = Standup Light Guided Bomb
high_2/charge/emDamage              = 770.000000
high_2/charge/explosiveDamage       = 770.000000
high_2/charge/kineticDamage         = 770.000000
high_2/charge/thermalDamage         = 770.000000

high_3/type              = Standup Heavy Energy Neutralizer I
high_3/state             = active
high_3/capacitorPeakLoad = 60.000000
high_3/cycleTime         = 15000.000000
high_3/capacitorNeed     = 900.000000

service_1/type                          = Standup Market Hub I
service_1/state                         = online
service_1/serviceModuleFuelAmount       = 30.000000
service_1/serviceModuleFuelOnlineAmount = 2160.000000
