tests/snapshots/regression-subsystem_online-skills_5.snap
---
source: tests/harness/case.rs
expression: "calculate_fit(text, skills, edit)"
---
ship/type                                    = Loki
ship/maxTargetsCharacter                     = 25.000000
ship/maxTargets                              = 6.000000
ship/upgradeFree                             = 400.000000
ship/scanStrength                            = 20.400000
ship/passiveShieldEffectiveRechargeRate      = 13.528138
ship/passiveShieldRechargeRate               = 7.440476
ship/ehp                                     = 14760.754853
ship/shieldThermalDamageEffectiveResonance   = 0.150000
ship/shieldKineticDamageEffectiveResonance   = 0.150000
ship/shieldExplosiveDamageEffectiveResonance = 0.125000
ship/shieldEmDamageEffectiveResonance        = 0.125000
ship/hullThermalDamageEffectiveResonance     = 0.167500
ship/hullKineticDamageEffectiveResonance     = 0.167500
ship/hullExplosiveDamageEffectiveResonance   = 0.167500
ship/hullEmDamageEffectiveResonance          = 0.167500
ship/armorThermalDamageEffectiveResonance    = 0.121875
ship/armorKineticDamageEffectiveResonance    = 0.187500
ship/armorExplosiveDamageEffectiveResonance  = 0.225000
ship/armorEmDamageEffectiveResonance         = 0.050000
ship/shieldEhp                               = 5681.818059
ship/hullEhp                                 = 3731.343191
ship/armorEhp                                = 5347.593603
ship/shieldDamageEffectiveResonance          = 0.550000
ship/hullDamageEffectiveResonance            = 0.670000
ship/armorDamageEffectiveResonance           = 0.584375
ship/powerFree                               = 1050.000000
ship/cpuFree                                 = 562.500000
ship/capacitorDepletesIn                     = -1.000000
ship/capacitorPeakDeltaPercentage            = 100.000000
ship/capacitorPeakDelta                      = 26.495726
ship/capacitorPeakRecharge                   = 26.495726
ship/alignTime                               = 6.973200
ship/hp                                      = 2500.000000
ship/powerOutput                             = 1050.000000
ship/maxVelocity                             = 231.250000
ship/capacity                                = 450.000000
ship/cpuOutput                               = 562.500000
ship/rechargeRate                            = 182812.500000
ship/agility                                 = 0.364500
ship/maxTargetRange                          = 81250.000000
ship/warpCapacitorNeed                       = 0.000000
ship/scanLadarStrength                       = 20.400000
ship/shieldCapacity                          = 3125.000000
ship/armorHP                                 = 3125.000000
ship/droneCapacity                           = 40.000000
ship/maxResearchGangSize                     = 30.000000
ship/shieldRechargeRate                      = 1050000.000000
ship/capacitorCapacity                       = 1937.500000
ship/shieldUniformity                        = 1.000000
ship/shipBonus2AF                            = 25.000000
ship/shipBonusGC                             = 25.000000
ship/shipBonusCC                             = 25.000000
ship/shipBonusMB                             = 25.000000
ship/shipBonusCB                             = 25.000000
ship/shipBonusAB                             = 25.000000
ship/shipBonusMI                             = 25.000000
ship/shipBonusAI                             = 25.000000
ship/shipBonusCI                             = 25.000000
ship/shipBonusGI                             = 25.000000
ship/signatureRadius                         = 165.000000
ship/scanResolution                          = 300.000000
ship/advancedAgility                         = 0.750000
ship/jumpDriveConsumptionAmount              = 1000.000000
ship/advancedCapitalAgility                  = 0.750000
ship/jumpDriveCapacitorNeed                  = 0.750000
ship/droneBandwidth                          = 40.000000
ship/shipBonusStrategicCruiserMinmatar1      = -25.000000
ship/energyWarfareResistance                 = 0.850000
ship/shipBonusStrategicCruiserMinmatar2      = 50.000000
ship/shipBonusUF1                            = 5.000000
ship/shipBonusUF2                            = 5.000000
ship/shipBonusUC1                            = 5.000000
ship/shipBonusUC2                            = 5.000000
ship/shipBonusUB1                            = 5.000000
ship/shipBonusUB2                            = 5.000000
ship/isBlackOpsJumpPortalPassenger           = 1.000000
ship/isBlackOpsJumpConduitPassenger          = 1.000000
ship/conduitPassengerBonusModAdd             = 25.000000
ship/shipBonusOreDestroyer1                  = 25.000000
ship/shipBonusOreDestroyer2                  = 25.000000
ship/shipBonusOreDestroyer3                  = 25.000000
ship/shipBonusSoEECS1                        = 25.000000
ship/shipBonusSoEECS2                        = 25.000000
ship/shipBonusSoEECS3                        = 25.000000
ship/shipBonusSoEECS4                        = 25.000000
ship/shipBonusSoEECS5                        = 25.000000
ship/shipBonusAB3                            = 25.000000

character/corporationMemberLimit                   = 12600.000000
character/maxLockedTargets                         = 25.000000
character/manufactureSlotLimit                     = 15.000000
character/manufactureTimeMultiplier                = 0.680000
character/maxActiveDrones                          = 5.000000
character/negotiationPercentage                    = 1.250000
character/diplomacyBonus                           = 2.000000
character/fastTalkPercentage                       = 125.000000
character/connectionsBonus                         = 2.000000
character/criminalConnectionsBonus                 = 2.000000
character/amarrTechTimePercent                     = 75.000000
character/manufacturingTimeResearchSpeed           = 0.637500
character/copySpeedPercent                         = 0.637500
character/reverseEngineeringChance                 = 100.000000
character/mineralNeedResearchSpeed                 = 0.637500
character/smugglingChance                          = 0.500000
character/droneControlDistance                     = 60000.000000
character/maxLaborotorySlots                       = 11.000000
character/bountyBonus                              = 7500.000000
character/contrabandDetectionChance                = -0.500000
character/maxJumpClones                            = 15.000000
character/posStructureControlAmount                = 5.000000
character/moduleRepairRate                         = 30.000000
character/shipBrokenModuleRepairCostMultiplier     = 0.375000
character/baseDefenderAllyCost                     = 7500000.000000
character/cloneJumpCoolDown                        = 19.000000
character/piTaxReduction                           = 0.500000
character/inventionReverseEngineeringResearchSpeed = 0.850000
character/reactionTimeMultiplier                   = 0.800000
character/reactionSlotLimit                        = 10.000000

subsystem_1/type                        = Loki Core - Augmented Nuclear Reactor
subsystem_1/state                       = online
subsystem_1/subsystemBonusMinmatarCore  = -25.000000
subsystem_1/subsystemBonusMinmatarCore2 = -15.000000

subsystem_2/type                             = Loki Defensive - Covert Reconfiguration
subsystem_2/state                            = online
subsystem_2/subsystemBonusMinmatarDefensive  = 37.500000
subsystem_2/subsystemBonusMinmatarDefensive2 = 50.000000
subsystem_2/subsystemBonusMinmatarDefensive3 = 37.500000

subsystem_3/type                             = Loki Offensive - Launcher Efficiency Configuration
subsystem_3/state                            = online
subsystem_3/subsystemBonusMinmatarOffensive  = 25.000000
subsystem_3/subsystemBonusMinmatarOffensive2 = -50.000000
subsystem_3/subsystemBonusMinmatarOffensive3 = 25.000000

subsystem_4/type                              = Loki Propulsion - Wake Limiter
subsystem_4/state                             = online
subsystem_4/subsystemBonusMinmatarPropulsion  = 50.000000
subsystem_4/subsystemBonusMinmatarPropulsion2 = -50.000000
